gary/david fix word-wrap on topic secondary items

--- a/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_secondaryItems.scss
+++ b/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_secondaryItems.scss
@@ -84,8 +84,7 @@
         {
             word-wrap: break-word;
             
-            @media #($mobile)
-            {
+            @media #{$mobile,$tablet} {
                 padding-left: 15px; 
                 padding-right: 15px;
             } 
